--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ConsoleE",
+    "name": "consolee",
     "displayName": "ConsoleE",
     "unity": "2018.3",
     "description": "This is a test to add packages."
